# grosfarm-ha-integration

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hacs.json  info.md  pyproject.toml
.github/workflows/: test.yml  validate.yml
custom_components/grosfarm/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  light_controller.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/grosfarm/translations/: en.json  ru.json
scripts/: run-hassfest.sh
tests/: __init__.py  conftest.py  test_cloud_coordinator.py  test_config_flow.py  test_init.py  test_light_controller.py  test_options_flow.py
